--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </p>
             <p>Download the application using the button below.</p>
             <a
-              href="random-profile-generator.exe"
+              href="./random-profile-generator.exe"
               class="btn btn-primary btn-lg animate__animated animate__bounceIn"
               >Download Desktop Application</a
             >
